Removed node_modules and added to gitignore

--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ CLOUDINARY_API_KEY=144845477746542
 CLOUDINARY_API_SECRET=rpC4inVzovndCZUOu4oou5EvOv4
 
 # CORS - Frontend URL
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://taskflow-projectmanagement.vercel.app
